<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_about_us" />
    <item
        android:id="@+id/nav_campaigns"
        android:icon="@drawable/ic_home"
        android:title="@string/campaigns_navigation" />
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_login" />
    <item
        android:id="@+id/nav_register"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_register" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_back"
        android:title="@string/menu_logout" />
</menu>
